--- a/src/main/resources/fxml/stylesheets/style.css
+++ b/src/main/resources/fxml/stylesheets/style.css
@@ -32,14 +32,14 @@
 }
 
 .summer-button {
-    -fx-background-image: url("/environment/hot_icon.png");
+    -fx-background-image: url("/img/environment/hot_icon.png");
     -fx-background-size: 3em 3em;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
 }
 
 .winter-button {
-    -fx-background-image: url("/environment/cold_icon.png");
+    -fx-background-image: url("/img/environment/cold_icon.png");
     -fx-background-size: 3em 3em;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
