--- a/src/main/resources/fxml/chartChoiceSelection.fxml
+++ b/src/main/resources/fxml/chartChoiceSelection.fxml
@@ -12,12 +12,12 @@
    <children>
       <VBox layoutX="422.0" layoutY="-43.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label text="Scegli il grafico da visualizzare" textAlignment="JUSTIFY" textOverrun="CENTER_ELLIPSIS" wrapText="true">
+            <Label text="Scegli il grafico da visualizzare" textAlignment="LEFT" textOverrun="CENTER_ELLIPSIS" wrapText="true">
                <padding>
                   <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                </padding>
                <font>
-                  <Font name="System Bold" size="20.0" />
+                  <Font name="System Bold" size="17.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="20.0" />
@@ -28,7 +28,7 @@
                   <ToggleGroup fx:id="chartChoice" />
                </toggleGroup>
                <font>
-                  <Font size="17.0" />
+                  <Font size="16.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="10.0" left="15.0" right="5.0" top="10.0" />
@@ -36,7 +36,7 @@
             </RadioButton>
             <RadioButton mnemonicParsing="false" onAction="#showMutationsChart" text="Mutazioni" textOverrun="CENTER_ELLIPSIS" toggleGroup="$chartChoice" wrapText="true">
                <font>
-                  <Font size="17.0" />
+                  <Font size="16.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="10.0" left="15.0" right="5.0" top="10.0" />
@@ -44,7 +44,7 @@
             </RadioButton>
             <RadioButton mnemonicParsing="false" fx:id="pedigreeRadioButton" onAction="#showPedigreeChart" text="Albero Genealogico" textOverrun="CENTER_ELLIPSIS" toggleGroup="$chartChoice" wrapText="true">
                <font>
-                  <Font size="17.0" />
+                  <Font size="16.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="10.0" left="15.0" right="5.0" top="10.0" />
