--- a/src/main/resources/fxml/chartChoiceSelection.fxml
+++ b/src/main/resources/fxml/chartChoiceSelection.fxml
@@ -34,7 +34,7 @@
                   <Insets bottom="10.0" left="15.0" right="5.0" top="10.0" />
                </VBox.margin>
             </RadioButton>
-            <RadioButton mnemonicParsing="false" onAction="#showMutationsChart" text="Mutazioni" textOverrun="CENTER_ELLIPSIS" toggleGroup="$chartChoice" wrapText="true">
+            <RadioButton mnemonicParsing="false" onAction="#showMutationsChart" text="Proporzioni" textOverrun="CENTER_ELLIPSIS" toggleGroup="$chartChoice" wrapText="true">
                <font>
                   <Font size="16.0" />
                </font>
