--- a/src/main/resources/fxml/baseApp.fxml
+++ b/src/main/resources/fxml/baseApp.fxml
@@ -1,139 +1,157 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1100.0" style="-fx-background-color: #d1a29e;" stylesheets="/fxml/stylesheets/style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.scalaFX.FXControllers.BaseAppController">
-   <children>
-      <GridPane layoutX="222.0" layoutY="99.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="NEVER" percentWidth="70.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="293.0" minWidth="10.0" percentWidth="30.0" prefWidth="155.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints percentHeight="100.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <GridPane>
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <GridPane GridPane.rowIndex="1">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="700.0" prefWidth="1100.0" style="-fx-background-color: #d1a29e;"
+            stylesheets="/fxml/stylesheets/style.css" xmlns="http://javafx.com/javafx/8.0.171"
+            fx:controller="view.scalaFX.FXControllers.BaseAppController">
+    <children>
+        <GridPane layoutX="222.0" layoutY="99.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                  AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="NEVER" percentWidth="70.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="293.0" minWidth="10.0" percentWidth="30.0"
+                                   prefWidth="155.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints percentHeight="100.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <children>
+                <GridPane>
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="80.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints percentHeight="100.0" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                     </rowConstraints>
-                     <children>
-                         <AnchorPane fx:id="chartsPane" prefHeight="200.0" prefWidth="200.0" styleClass="panel" >
-                             <GridPane.margin>
-                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                             </GridPane.margin>
-                         </AnchorPane>
-                        <AnchorPane fx:id="chartChoicePane" prefHeight="200.0" prefWidth="200.0" styleClass="panel" GridPane.columnIndex="1">
-                           <GridPane.margin>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                           </GridPane.margin>
+                    <children>
+                        <GridPane GridPane.rowIndex="1">
+                            <columnConstraints>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="80.0"
+                                                   prefWidth="100.0"/>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0"
+                                                   prefWidth="100.0"/>
+                            </columnConstraints>
+                            <rowConstraints>
+                                <RowConstraints percentHeight="100.0"/>
+                            </rowConstraints>
+                            <children>
+                                <AnchorPane fx:id="chartsPane" prefHeight="200.0" prefWidth="200.0" styleClass="panel">
+                                    <GridPane.margin>
+                                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                                    </GridPane.margin>
+                                </AnchorPane>
+                                <AnchorPane fx:id="chartChoicePane" prefHeight="200.0" prefWidth="200.0"
+                                            styleClass="panel" GridPane.columnIndex="1">
+                                    <GridPane.margin>
+                                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                                    </GridPane.margin>
+                                </AnchorPane>
+                            </children>
+                        </GridPane>
+                        <AnchorPane fx:id="simulationPane" prefHeight="309.0" prefWidth="800.0">
+                            <GridPane.margin>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                            </GridPane.margin>
                         </AnchorPane>
-                     </children>
-                  </GridPane>
-                  <AnchorPane fx:id="simulationPane" prefHeight="309.0" prefWidth="800.0">
-                     <GridPane.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </GridPane.margin>
-                  </AnchorPane>
-                  <GridPane alignment="CENTER" pickOnBounds="false">
+                        <GridPane alignment="CENTER" pickOnBounds="false">
+                            <columnConstraints>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                            </columnConstraints>
+                            <rowConstraints>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                            </rowConstraints>
+                            <children>
+                                <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1"
+                                            GridPane.rowIndex="4">
+                                    <children>
+                                        <Button fx:id="startButton" alignment="CENTER" contentDisplay="CENTER"
+                                                focusTraversable="false" maxHeight="200.0" minHeight="50.0"
+                                                minWidth="200.0" mnemonicParsing="false"
+                                                onAction="#startSimulationClick" prefHeight="50.0" prefWidth="200.0"
+                                                text="START" textAlignment="CENTER" AnchorPane.leftAnchor="0.0"
+                                                AnchorPane.rightAnchor="0.0">
+                                            <font>
+                                                <Font name="System Bold" size="24.0"/>
+                                            </font>
+                                        </Button>
+                                    </children>
+                                </AnchorPane>
+                                <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+                                    <children>
+                                        <Label fx:id="generationLabel" alignment="CENTER" textAlignment="CENTER"
+                                               textOverrun="CENTER_ELLIPSIS" wrapText="true"
+                                               AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                            <font>
+                                                <Font name="System Bold" size="17.0"/>
+                                            </font>
+                                        </Label>
+                                    </children>
+                                </AnchorPane>
+                                <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0"
+                                      GridPane.columnIndex="2">
+                                    <children>
+                                        <Button maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0"
+                                                mnemonicParsing="false" onAction="#setEnvironmentSummer"
+                                                prefHeight="60.0" prefWidth="60.0" styleClass="summer-button">
+                                            <HBox.margin>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" top="30.0"/>
+                                            </HBox.margin>
+                                        </Button>
+                                        <Button maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0"
+                                                mnemonicParsing="false" onAction="#setEnvironmentWinter"
+                                                prefHeight="60.0" prefWidth="60.0" styleClass="winter-button">
+                                            <HBox.margin>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" top="30.0"/>
+                                            </HBox.margin>
+                                        </Button>
+                                    </children>
+                                    <GridPane.margin>
+                                        <Insets/>
+                                    </GridPane.margin>
+                                </HBox>
+                            </children>
+                        </GridPane>
+                    </children>
+                </GridPane>
+                <GridPane GridPane.columnIndex="1">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100.0" prefWidth="100.0"/>
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" percentHeight="50.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints maxHeight="127.0" minHeight="10.0" percentHeight="50.0" prefHeight="120.0"
+                                        vgrow="SOMETIMES"/>
                     </rowConstraints>
-                     <children>
-                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
-                           <children>
-                              <Button fx:id="startButton" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" maxHeight="200.0" minHeight="50.0" minWidth="200.0" mnemonicParsing="false" onAction="#startSimulationClick" prefHeight="50.0" prefWidth="200.0" text="START" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                                 <font>
-                                    <Font name="System Bold" size="24.0" />
-                                 </font>
-                              </Button>
-                           </children>
+                    <children>
+                        <AnchorPane fx:id="mutationChoicePane" prefHeight="200.0" prefWidth="200.0" styleClass="panel">
+                            <GridPane.margin>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                            </GridPane.margin>
                         </AnchorPane>
-                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
-                           <children>
-                              <Label fx:id="generationLabel" alignment="CENTER" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <font>
-                                    <Font name="System Bold" size="17.0" />
-                                 </font>
-                              </Label>
-                           </children>
+                        <AnchorPane fx:id="factorChoicePane" prefHeight="200.0" prefWidth="200.0" styleClass="panel"
+                                    GridPane.rowIndex="1">
+                            <GridPane.margin>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                            </GridPane.margin>
                         </AnchorPane>
-                        <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
-                           <children>
-                              <Button maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" onAction="#setEnvironmentSummer" prefHeight="60.0" prefWidth="60.0" styleClass="summer-button">
-                                 <HBox.margin>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="30.0" />
-                                 </HBox.margin>
-                              </Button>
-                              <Button maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" onAction="#setEnvironmentWinter" prefHeight="60.0" prefWidth="60.0" styleClass="winter-button">
-                                 <HBox.margin>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="30.0" />
-                                 </HBox.margin>
-                              </Button>
-                           </children>
-                           <GridPane.margin>
-                              <Insets />
-                           </GridPane.margin>
-                        </HBox>
-                     </children>
-                  </GridPane>
-               </children>
-            </GridPane>
-            <GridPane GridPane.columnIndex="1">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" percentHeight="50.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="127.0" minHeight="10.0" percentHeight="50.0" prefHeight="120.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <AnchorPane fx:id="mutationChoicePane" prefHeight="200.0" prefWidth="200.0" styleClass="panel">
-                     <GridPane.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </GridPane.margin>
-                  </AnchorPane>
-                  <AnchorPane fx:id="factorChoicePane" prefHeight="200.0" prefWidth="200.0" styleClass="panel" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </GridPane.margin>
-                  </AnchorPane>
-               </children>
-            </GridPane>
-         </children>
-      </GridPane>
-   </children>
+                    </children>
+                </GridPane>
+            </children>
+        </GridPane>
+    </children>
 </AnchorPane>
