--- a/src/main/resources/fxml/chartChoiceSelection.fxml
+++ b/src/main/resources/fxml/chartChoiceSelection.fxml
@@ -34,7 +34,7 @@
                   <Insets bottom="10.0" left="15.0" right="5.0" top="10.0" />
                </VBox.margin>
             </RadioButton>
-            <RadioButton mnemonicParsing="false" onAction="#showMutationsChart" text="Proporzioni" textOverrun="CENTER_ELLIPSIS" toggleGroup="$chartChoice" wrapText="true">
+            <RadioButton mnemonicParsing="false" onAction="#showMutationsChart" text="Proporzioni" toggleGroup="$chartChoice" wrapText="true">
                <font>
                   <Font size="16.0" />
                </font>
@@ -50,6 +50,17 @@
                   <Insets bottom="10.0" left="15.0" right="5.0" top="10.0" />
                </VBox.margin>
             </RadioButton>
+            <Label text="Legenda gene -> lettera" textAlignment="LEFT" wrapText="true">
+               <padding>
+                  <Insets bottom="5.0" left="10.0" right="10.0" top="25.0" />
+               </padding>
+               <font>
+                  <Font name="System Bold" size="17.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Label>
          </children>
       </VBox>
    </children>
