--- a/src/main/resources/fxml/baseApp.fxml
+++ b/src/main/resources/fxml/baseApp.fxml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #d1a29e;" stylesheets="/fxml/stylesheets/style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.scalaFX.FXControllers.BaseAppController">
     <children>
         <GridPane layoutX="222.0" layoutY="99.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -45,7 +40,12 @@
                                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                     </GridPane.margin>
                                     <children>
-                                        <Text fx:id="pedigreeText" layoutX="200.0" layoutY="150.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clicca su un coniglietto per visualizzarne l'albero genealogico." textAlignment="CENTER" wrappingWidth="220.6689453125" />
+                                        <Text fx:id="pedigreeText" layoutX="160.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0"
+                                              text="Clicca su un coniglietto per visualizzarne l'albero genealogico." textAlignment="CENTER" wrappingWidth="320.6689453125">
+                                            <font>
+                                                <Font size="16.0" />
+                                            </font>
+                                        </Text>
                                     </children>
                                 </AnchorPane>
                                 <AnchorPane fx:id="chartChoicePane" prefHeight="200.0" prefWidth="200.0" styleClass="panel" GridPane.columnIndex="1">
