--- a/src/main/resources/fxml/stylesheets/style.css
+++ b/src/main/resources/fxml/stylesheets/style.css
@@ -45,6 +45,30 @@
     -fx-background-position: center;
 }
 
+
+.speedup-button {
+    -fx-background-image: url("/img/speedup.png");
+    -fx-background-size: 3em 3em;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center;
+}
+
+
+.restart-button {
+    -fx-background-image: url("/img/restart.png");
+    -fx-background-size: 3em 3em;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center;
+}
+
+
+.speeddown-button {
+    -fx-background-image: url("/img/speeddown.png");
+    -fx-background-size: 3em 3em;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center;
+}
+
 .chart-line-mySymbol {
     -fx-scale-x: 0.7;
     -fx-scale-y: 0.7;
