--- a/src/main/resources/fxml/baseApp.fxml
+++ b/src/main/resources/fxml/baseApp.fxml
@@ -74,7 +74,7 @@
                             <children>
                                 <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                                     <children>
-                                        <Button fx:id="startButton" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" maxHeight="200.0" minHeight="50.0" minWidth="200.0" mnemonicParsing="false" onAction="#startSimulationClick" prefHeight="50.0" prefWidth="200.0" text="START" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                        <Button fx:id="startButton" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" maxHeight="200.0" minHeight="50.0" minWidth="200.0" mnemonicParsing="false" onAction="#startSimulation" prefHeight="50.0" prefWidth="200.0" text="START" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                                             <font>
                                                 <Font name="System Bold" size="24.0" />
                                             </font>
