--- a/src/main/resources/fxml/baseApp.fxml
+++ b/src/main/resources/fxml/baseApp.fxml
@@ -117,17 +117,12 @@
                                 </HBox>
                         <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="6">
                            <children>
-                              <Button disable="true" maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" styleClass="speeddown-button">
+                              <Button disable="true" maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" styleClass="restart-button" visible="false">
                                  <HBox.margin>
                                     <Insets bottom="30.0" left="10.0" right="10.0" top="10.0" />
                                  </HBox.margin>
                               </Button>
-                              <Button disable="true" maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" styleClass="restart-button">
-                                 <HBox.margin>
-                                    <Insets bottom="30.0" left="10.0" right="10.0" top="10.0" />
-                                 </HBox.margin>
-                              </Button>
-                              <Button maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" styleClass="speedup-button" onAction="#addSpeedUp">
+                              <Button maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" onAction="#addSpeedUp" prefHeight="60.0" prefWidth="60.0" styleClass="speedup-button" text="x2">
                                  <HBox.margin>
                                     <Insets bottom="30.0" left="10.0" right="10.0" top="10.0" />
                                  </HBox.margin>
